Added endpoint to retreive configuration information (traefik uri)
Updated readme with the config values. Updated Api specification
